# stock-system

./: .gitignore  docker-compose.yaml
mock-data/: db.json
stock-system-backend/: .gitignore
stock-system-backend/app/: README.md  main.py  pyproject.toml  requirements.txt
stock-system-backend/app/models/: stock.py
stock-system-backend/app/routes/: stock.py
stock-system-backend/app/services/: stock_service.py
stock-system-frontend/: package-lock.json  package.json  pnpm-lock.yaml
stock-system-frontend/src/: App.css  App.js
stock-system-frontend/src/components/: StockTable.js
