[project]
name = "app"
version = "0.1.0"
description = "API for the Stock System fullstack project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.6.1",
    "fastapi>=0.115.2",
    "pydantic>=2.9.2",
    "pydantic-core>=2.23.4",
    "sniffio>=1.3.1",
    "starlette>=0.39.2",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.31.1",
    "ruff>=0.6.9",
]
